# flipdiagbmp24

./: .gdbinit  CMakeLists.txt  README.md  flipdiagbmp24.asm  main.c
x86/: flipdiagbmp24.asm
x86-64/: .gdbinit  CMakeLists.txt  flipdiagbmp24.asm
